--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,9 +4,14 @@ flask-cors==3.0.10
 torch==2.7.0
 pillow==9.0.0
 tqdm==4.62.3
-numpy==1.22.0
+numpy==1.24.3
 pathlib==1.0.1
 diffusers
 transformers
 einops
 sentencepiece
+basicsr
+realesrgan
+opencv-python
+facexlib  # Optional - needed for face enhancement in RealESRGAN
+torchvision
