--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,6 @@
-# mangaui/backend/requirements.txt
 flask==2.0.1
 flask-cors==3.0.10
-torch==2.7.0
+torch==2.6.0  # Specific version that worked with drawatoon on M3
 pillow==9.0.0
 tqdm==4.62.3
 numpy==1.24.3
@@ -10,8 +9,4 @@ diffusers
 transformers
 einops
 sentencepiece
-basicsr
-realesrgan
 opencv-python
-facexlib  # Optional - needed for face enhancement in RealESRGAN
-torchvision
