--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 flask==2.0.1
 flask-cors==3.0.10
-torch==2.6.0  # Specific version that worked with drawatoon on M3
+torch==2.6.0  # Specific version that works with drawatoon on M3 Max
 pillow==9.0.0
 tqdm==4.62.3
 numpy==1.24.3
@@ -10,3 +10,4 @@ transformers
 einops
 sentencepiece
 opencv-python
+beautifulsoup4
