--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 /backend/drawatoon-v1/
 /backend/character_output/character_embeddings/*.pt
 /backend/character_output/character_images/keepers/*.png
+/backend/character_output/character_images/*.png
 /backend/manga_output/**/*.png
 /backend/manga_projects/*
 !/backend/manga_projects/
